<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_viewlessonplan"
            android:icon="@drawable/ic_viewplain"
            android:title="@string/menu_viewlessonplan" />
        <item
            android:id="@+id/nav_addfaculty"
            android:icon="@drawable/ic_add_faculty"
            android:title="@string/menu_addfaculty" />
        <item
            android:id="@+id/nav_modifyfaculty"
            android:icon="@drawable/ic_modifyfaculty"
            android:title="@string/menu_modifyfaculty" />
    </group>
    <item android:title="communication">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/menu_logout" />
        </menu>
    </item>
</menu>
